New: mergeASARs true

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     ],
     "mas": {
       "type": "distribution",
-      "singleArchFiles": "binaries/**"
+      "singleArchFiles": "binaries/**",
+      "mergeASARs": true
     }
   }
 }
